# sphinx-key

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEMONOTES.md  FLOW.md  LOGBOOK.md  Makefile  README.md  build.md  deploy.sh  manifest.txt  monitor.sh  riscv.md
auther/: Cargo.toml
auther/src/: lib.rs
broker/: Cargo.toml  Dockerfile  README.md  lss.md  picture.md  rocket.toml
broker/config/: rumqttd.conf
broker/src/: chain_tracker.rs  conn.rs  error_log.rs  handle.rs  init.rs  looper.rs  lss.rs  main.rs  mqtt.rs  msg.rs  routes.rs  run_test.rs  server.rs  test_client.rs  unix_fd.rs  util.rs
crypter/: Cargo.toml
crypter-ffi/: .gitignore  Cargo.toml  build-kotlin.sh  build-swift.sh  build.rs  readme.md
crypter-ffi/src/: crypter.swift  crypter.udl  crypterFFI.h  crypterFFI.modulemap  lib.rs  parse.rs
crypter-ffi/src/uniffi/crypter/: crypter.kt
crypter/src/: chacha.rs  ecdh.rs  lib.rs
factory/: Cargo.toml  README.md  sdkconfig.defaults  table.csv
factory/.cargo/: config.toml
factory/src/: colors.rs  led.rs  main.rs  ota.rs  sdcard.rs
parser/: Cargo.toml
parser/src/: control.rs  error.rs  lib.rs  policy.rs  topics.rs  validator.rs
persister/: Cargo.toml
persister/src/: lib.rs  model.rs  persist_fs.rs  ser_util.rs
signer/: Cargo.toml
signer/.cargo/: config.toml
signer/src/: derive.rs  init.rs  lib.rs  main.rs  msg.rs  policy.rs  randomstartingtime.rs
signer1/src/: lib.rs
sphinx-key/: 1_up.sh  Cargo.toml  README.md  clear_sd.sh  config.html  hmq.html  newseed.sh  run.sh  rust-toolchain.toml  sdkconfig.defaults  sphinx_key.sh  up.sh
sphinx-key/.cargo/: config.toml
sphinx-key/docs/: README.md
sphinx-key/scripts/: flash.sh  run-wokwi.sh
sphinx-key/src/: bitcoin_utils.rs  btn.rs  button.rs  clear.rs  led.rs  main.rs  ota.rs  status.rs  test.rs  tiny.rs
sphinx-key/src/conn/: html.rs  http.rs  mod.rs  mqtt.rs  sntp.rs  wifi.rs
sphinx-key/src/core/: config.rs  control.rs  events.rs  init.rs  logs.rs  lss.rs  mod.rs  mode.rs  util.rs
sphinx-key/src/periph/: button.rs  led.rs  mod.rs  sd.rs
sphinx-key/src/srv/: html.rs  mod.rs
tester/: .env-example  Cargo.toml  README.md  cmd.json  nonce_cmd.json  ota_cmd.json  readme.md
tester/src/: config.rs  ctrl.rs  main.rs  server.rs  wifi.rs
