[workspace]
members  = ["factory", "sphinx-key"]
exclude  = ["broker", "tester"]
resolver = "2"

[workspace.dependencies]
anyhow       = { version = "1", features = ["backtrace"] }
bitflags     = "1.3.2"
embedded-hal = "=1.0.0-alpha.10"
embedded-svc = "0.25.0"
embuild      = "0.31.2"
esp-idf-hal  = "0.41.1"
esp-idf-svc  = { version = "0.46.0", features = ["experimental", "alloc"] }
esp-idf-sys  = { version = "0.33.1", features = ["binstart"] }
log          = "0.4.17"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "z"     # Optimize for size.
panic         = "abort"
strip         = true    # Automatically strip symbols from the binary.

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
