[package]
name = "sphinx-key-auther"
version = "0.1.0"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"

[dependencies]
secp256k1 = { version = "0.22.0", default-features = false, features = ["std", "rand-std", "bitcoin_hashes"] }
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
base64 = { version = "0.13.0" }

[features]
default = [ "no-std", "secp-recovery", "secp-lowmemory" ]
no-std = ["secp256k1/alloc"]
secp-lowmemory = ["secp256k1/lowmemory"]
secp-recovery = ["secp256k1/recovery"]
rand = ["secp256k1/rand-std"]