[package]
default-run = "sphinx-key-broker"
edition     = "2021"
name        = "sphinx-key-broker"
version     = "0.1.0"

[profile.release]
strip = "debuginfo"

[dependencies]
anyhow            = { version = "1", features = ["backtrace"] }
async-trait       = "0.1"
chrono            = "0.4"
clap              = "3.2"
clap_derive       = "3.2"
confy             = "0.4.0"
fern              = { version = "0.6", features = ["colored"] }
hex               = "0.4.3"
log               = "0.4"
lru               = "0.12.1"
once_cell         = "1.12.0"
pretty_env_logger = "0.4.0"
rocket            = { version = "0.5.0-rc.2", features = ["json"] }
rumqttc           = "0.12.0"
rumqttd           = { git = "https://github.com/Evanfeenstra/rumqtt", branch = "sphinx-asdf", features = ["websocket"] }
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
thiserror         = "1.0.31"
toml              = "0.5.9"
url               = { version = "2.2" }

vls-frontend        = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", rev = "19447b1e5d2956aa72aeca4229da7a96c5eaf208" }
vls-protocol        = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", rev = "19447b1e5d2956aa72aeca4229da7a96c5eaf208" }
vls-protocol-client = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", rev = "19447b1e5d2956aa72aeca4229da7a96c5eaf208" }
vls-proxy           = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", rev = "19447b1e5d2956aa72aeca4229da7a96c5eaf208" }
# vls-frontend        = { path = "../../vls/vls-frontend" }
# vls-protocol        = { path = "../../vls/vls-protocol" }
# vls-protocol-client = { path = "../../vls/vls-protocol-client" }
# vls-proxy           = { path = "../../vls/vls-proxy" }

lss-connector = { git = "https://github.com/stakwork/sphinx-rs", rev = "05786c02ae213a16ded24608a8858f8e9c6688e0" }
sphinx-signer = { git = "https://github.com/stakwork/sphinx-rs", rev = "05786c02ae213a16ded24608a8858f8e9c6688e0" }
# lss-connector = { path = "../../sphinx-rs/lss-connector" }
# sphinx-signer = { path = "../../sphinx-rs/signer" }

[features]
default = ["std"]
std     = ["sphinx-signer/std", "vls-protocol/std"]
