[package]
default-run = "sphinx-key-broker"
edition     = "2021"
name        = "sphinx-key-broker"
version     = "0.1.0"

[profile.release]
strip = "debuginfo"

[dependencies]
anyhow            = { version = "1", features = ["backtrace"] }
async-trait       = "0.1"
chrono            = "0.4"
clap              = "3.2"
clap_derive       = "3.2"
fern              = { version = "0.6", features = ["colored"] }
hex               = "0.4.3"
log               = "0.4"
lru               = "0.12.1"
once_cell         = "1.12.0"
rocket            = { version = "0.5.0-rc.2", features = ["json"] }
rumqttd           = { git = "https://github.com/Evanfeenstra/rumqtt", branch = "sphinx-asdf", features = ["websocket"] }
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
thiserror         = "1.0.31"
toml              = "0.5.9"
triggered         = "0.1.2"
url               = { version = "2.2" }

vls-frontend        = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", rev = "a28153e0f1b6598e6538d32b3c5bfb9c7657d565" }
vls-protocol        = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", rev = "a28153e0f1b6598e6538d32b3c5bfb9c7657d565" }
vls-protocol-client = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", rev = "a28153e0f1b6598e6538d32b3c5bfb9c7657d565" }
vls-proxy           = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", rev = "a28153e0f1b6598e6538d32b3c5bfb9c7657d565" }
# vls-frontend        = { path = "../../vls/vls-frontend" }
# vls-protocol        = { path = "../../vls/vls-protocol" }
# vls-protocol-client = { path = "../../vls/vls-protocol-client" }
# vls-proxy           = { path = "../../vls/vls-proxy" }

lss-connector = { git = "https://github.com/stakwork/sphinx-rs", rev = "b461de86bdd8945254f38410902908f4c798da57" }
sphinx-signer = { git = "https://github.com/stakwork/sphinx-rs", rev = "b461de86bdd8945254f38410902908f4c798da57" }
# lss-connector = { path = "../../sphinx-rs/lss-connector" }
# sphinx-signer = { path = "../../sphinx-rs/signer" }

[features]
default = ["std"]
std     = ["sphinx-signer/std", "vls-protocol/std"]
