[package]
name = "crypter-ffi"
version = "0.1.0"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"

[lib]
name = "crypter"
crate-type = ["staticlib", "cdylib"]

[dependencies]
sphinx-key-crypter = { path = "../crypter" }
uniffi = "0.19.2"
hex = "0.4.3"
thiserror = "1.0.31"

[build-dependencies]
uniffi_build = "0.19.2"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
debug = true # Enable debug symbols. For example, we can use `dwarfdump` to check crash traces.

