[package]
name = "sphinx-key-crypter"
version = "0.1.0"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
secp256k1 = { version = "0.22.0", features = ["std", "rand-std", "lowmemory"] }
rand = "0.8.5"

[dependencies.lightning]
version = "0.0.108"
default-features = false
features = ["std", "grind_signatures"]

# [dev-dependencies]

[patch.crates-io]
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
secp256k1 = { git = "https://github.com/Evanfeenstra/rust-secp256k1", branch = "v0.22.0-new-rand" }
lightning = { git = "https://github.com/Evanfeenstra/rust-lightning", branch = "v0.0.108-branch" }

