[package]
name = "sphinx-key-crypter"
version = "0.1.0"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
secp256k1 = { version = "0.24.0", features = ["std", "rand-std", "lowmemory"] }
rand = "0.8.5"

[dependencies.lightning]
git = "https://github.com/lightningdevkit/rust-lightning.git"
rev = "ea5b62fff69847941434fb51562e302eb4e7ff4b"
default-features = false
features = ["std", "grind_signatures"]

