[package]
name = "sphinx-key-factory"
version = "0.1.0"
authors = ["decentclock <decentclock.5uh2k@slmail.me>"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
esp-idf-sys.workspace = true
esp-idf-svc.workspace = true
esp-idf-hal.workspace = true
embedded-svc.workspace = true
embedded-hal.workspace = true
anyhow.workspace = true
log.workspace = true
bitflags.workspace = true

[build-dependencies]
embuild.workspace = true

[package.metadata.espflash]
partition_table = "table.csv"
