[package]
authors      = ["decentclock <decentclock.5uh2k@slmail.me>"]
edition      = "2021"
name         = "sphinx-key-factory"
rust-version = "1.71"
version      = "0.1.0"
resolver     = "2"

[dependencies]
esp-idf-svc = { version = "0.47.1", default-features = false, features = ["panic_handler", "libstart", "native"] }
embedded-sdmmc = "0.5.0"
esp-println = { version = "0.6.0", default-features = false, features = ["esp32c3", "uart"] }

[build-dependencies]
embuild = "0.31.3"

[package.metadata.espflash]
partition_table = "table.csv"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "z"     # Optimize for size.
panic         = "abort"
strip         = true    # Automatically strip symbols from the binary.

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
