[package]
name = "sphinx-key-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
vls-protocol = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer" }
serde = { version = "1.0", default-features = false }
serde_bolt = { version = "0.2", default-features = false }

[features]
default = ["std"]
std = ["vls-protocol/std"]

