[package]
name = "sphinx-key-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
vls-protocol = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git" }
serde = { version = "1.0", default-features = false }
rmp-serde = "1.1.0"
serde_bolt = { version = "0.2", default-features = false }
sphinx-auther = "0.1.10"
anyhow = "1"

[features]
default = ["std"]
std = ["vls-protocol/std"]

