[package]
authors      = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition      = "2021"
name         = "sphinx-key"
rust-version = "1.66"
version      = "0.1.0"
resolver     = "2"

[features]
default    = ["std"]
no_persist = []
pingpong   = []
std        = ["sphinx-signer"]
tls        = []

[dependencies]
hex              = "0.4.3"
serde            = { version = "1.0.137", default-features = false }
serde_json       = { version = "1.0.81", default-features = false }
serde_urlencoded = "0.7.1"
url              = "2"

# sphinx-rs
lss-connector  = { git = "https://github.com/stakwork/sphinx-rs.git", default-features = false, rev = "8b8ae30ca401a5e5ea4325e7d76331e74637937f" }
sphinx-crypter = { git = "https://github.com/stakwork/sphinx-rs.git", rev = "8b8ae30ca401a5e5ea4325e7d76331e74637937f" }
sphinx-signer  = { git = "https://github.com/stakwork/sphinx-rs.git", optional = true, rev = "8b8ae30ca401a5e5ea4325e7d76331e74637937f" }
# local
# lss-connector  = { path = "../../sphinx-rs/lss-connector", default-features = false }
# sphinx-crypter  = { path = "../../sphinx-rs/crypter" }
# sphinx-signer  = { path = "../../sphinx-rs/signer", optional = true }

anyhow       = { version = "1", features = ["backtrace"] }
bitflags     = "1.3.2"
esp-idf-svc  = { version = "0.47.1", features = ["experimental", "alloc", "binstart"] }
log          = "0.4.17"
base64       = "0.21.5"

[build-dependencies]
embuild      = "0.31.2"

[[bin]]
name = "clear"
path = "src/clear.rs"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "z"     # Optimize for size.
panic         = "abort"
strip         = true    # Automatically strip symbols from the binary.

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
