[package]
name = "sphinx-key-tester"
version = "0.1.0"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"

[dependencies]
sphinx-key-signer = { path = "../signer" }
sphinx-key-parser = { path = "../parser" }
sphinx-key-crypter = { path = "../crypter" }
vls-protocol = { git = "https://gitlab.com/Evanfeenstra/validating-lightning-signer", branch = "patch-sign-chan" }
vls-protocol-signer = { git = "https://gitlab.com/Evanfeenstra/validating-lightning-signer", branch = "patch-sign-chan", default-features = false, features = ["std", "secp-lowmemory"] }
# vls-protocol = { path = "../../../evanf/validating-lightning-signer/vls-protocol" }
# vls-protocol-signer = { path = "../../../evanf/validating-lightning-signer/vls-protocol-signer", default-features = false, features = ["std", "secp-lowmemory"] }
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
rumqttc = "0.12.0"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
pretty_env_logger = "0.4.0"
clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.5"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
rand = "0.8"
reqwest = { version = "0.11.11", features = ["json"] }
hex = "0.4.3"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.0"
dotenv = "0.15.0"
rocket = "0.5.0-rc.2"

[[bin]]
name = "config"
path = "src/config.rs"

[[bin]]
name = "config-server"
path = "src/server.rs"