[package]
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"
name    = "sphinx-key-tester"
version = "0.1.0"

[dependencies]
anyhow            = { version = "1", features = ["backtrace"] }
chrono            = "0.4"
clap              = "=3.0.0-beta.2"
clap_derive       = "=3.0.0-beta.5"
dotenv            = "0.15.0"
fern              = { version = "0.6", features = ["colored"] }
hex               = "0.4.3"
log               = "0.4"
pretty_env_logger = "0.4.0"
rand              = "0.8"
reqwest           = { version = "0.11.11", features = ["json"] }
rmp-serde         = "1.1.0"
rocket            = "0.5.0-rc.2"
rumqttc           = "0.12.0"
serde             = { version = "1.0.101", features = ["derive"] }
serde_json        = "1.0"
tokio             = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
urlencoding       = "2.1.0"

sphinx-crypter = { git = "https://github.com/stakwork/sphinx-rs.git", rev = "da0aeebc7a51ea7440fb8b23b602c12c0795c26b" }
sphinx-signer = { git = "https://github.com/stakwork/sphinx-rs.git", rev = "da0aeebc7a51ea7440fb8b23b602c12c0795c26b" }
# sphinx-crypter = { path = "../../sphinx-rs/crypter" }
# sphinx-signer = { path = "../../sphinx-rs/signer" }

[[bin]]
name = "config"
path = "src/config.rs"

[[bin]]
name = "config-server"
path = "src/server.rs"

[[bin]]
name = "ctrl"
path = "src/ctrl.rs"
